[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kamigami-no-tatakai"
version = "1.0.0"
description = "神々の闘い - ヤハウェと弥勒菩薩のバトルライトノベル"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "作者名", email = "author@example.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: General Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
]

dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "pymdown-extensions>=10.5",
    "mkdocs-minify-plugin>=0.7.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/kamigami-no-tatakai"
Documentation = "https://yourusername.github.io/kamigami-no-tatakai"
Repository = "https://github.com/yourusername/kamigami-no-tatakai.git"
Issues = "https://github.com/yourusername/kamigami-no-tatakai/issues"

[tool.setuptools]
packages = ["docs"]

[tool.setuptools.package-data]
docs = ["**/*.md"]